# bevy_attr

./: Cargo.toml  LICENSE-MIT  README.md
examples/: health_max_health.rs
src/: lib.rs
