[package]
name = "bevy_attr"
version = "0.1.0"
edition = "2021"

description = "Automatic management of highly modular, highly parallel values with minimal overhead"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]

[dependencies]
bevy-trait-query = { version = "0.1" }

[dependencies.bevy]
version = "0.9"
default-features = false
